# nanoSAE

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yaml
experiments/demo/: README.md  run.py
experiments/demo/wandb/: latest-run
experiments/demo/wandb/run-20241007_152258-xzx14ayc/files/: wandb-metadata.json
experiments/demo/wandb/run-20241007_162352-i62gwvzd/files/: wandb-metadata.json
experiments/demo/wandb/run-20241007_162434-rbta1ms7/files/: requirements.txt  wandb-metadata.json
experiments/vanilla_sae/: run.py
nanosae/: core.py  data.py  logging.py  train.py
nanosae/model/: tlens.py
nanosae/sae/: vanilla.py
nanosae/utils/: batch.py
tests/sae/: test_vanilla.py
