[project]
name = "nanoSAE"
version = "0.1.0"
description = "Minimal SAE training implementation"
authors = [
    {name = "Daniel Tan", email = "dtch1997@users.noreply.github.com"},
]
dependencies = [
    "torch>=2.4.1",
    "jaxtyping>=0.2.34",
    "nnsight>=0.3.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
