[project]
name = "nanoSAE"
version = "0.0.0"
description = "Minimal SAE training implementation"
authors = [{ name = "Daniel Tan", email = "dtch1997@users.noreply.github.com" }]
dependencies = [
    "torch>=2.4.1",
    "jaxtyping>=0.2.34",
    "datasets>=3.0.1",
    "simple-parsing>=0.1.6",
    "ruff>=0.6.9",
    "pytest>=8.3.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
nnsight = ["nnsight>=0.3.6"]
transformer-lens = ["transformer-lens>=2.7.0"]
notebook = ["ipykernel>=6.29.5"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.ruff]
line-length = 88
lint.select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I",
]
exclude = ["third_party", ".venv", "experiments"]
lint.ignore = ["F841", "E501", "E741", "I001", "E731", "F722"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.semantic_release]
version_variables = [
    "nanosae/__init__.py:__version__",
    "pyproject.toml:version",
]
branch = "main"
